[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes_Scripts/DefaultHUD.gd" type="Script" id=1]
[ext_resource path="res://KarmaFuture.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 2 )

[node name="DefaultHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CurrentRoomLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -194.0
margin_top = 1.0
margin_right = -43.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Current Room: "
__meta__ = {
"_edit_lock_": true
}

[node name="RoomNumberLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -43.0
margin_top = 1.0
margin_right = -5.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
align = 2
__meta__ = {
"_edit_lock_": true
}

[node name="HealthLabel" type="Label" parent="."]
margin_right = 39.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "HP: "
__meta__ = {
"_edit_lock_": true
}

[node name="HealthNumberLabel" type="Label" parent="."]
margin_left = 37.0
margin_top = 1.0
margin_right = 125.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GoldLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 41.0
margin_right = 64.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Gold: "
__meta__ = {
"_edit_lock_": true
}

[node name="GoldNumberLabel" type="Label" parent="."]
margin_left = 61.0
margin_top = 40.0
margin_right = 124.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StatsBackground" type="ColorRect" parent="."]
margin_left = 7.0
margin_top = 498.0
margin_right = 195.0
margin_bottom = 596.0
color = Color( 0.313726, 0.0235294, 0.0235294, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StatsLabel" type="Label" parent="."]
margin_left = 15.0
margin_top = 503.0
margin_right = 183.0
margin_bottom = 593.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="NextRoom" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -175.0
margin_right = 375.0
margin_bottom = -125.0
custom_fonts/font = SubResource( 2 )
text = "Next room"
__meta__ = {
"_edit_lock_": true
}

[node name="Inventory" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 625.0
margin_top = -175.0
margin_right = 800.0
margin_bottom = -125.0
custom_fonts/font = SubResource( 2 )
text = "Inventory"
__meta__ = {
"_edit_lock_": true
}

[node name="Stats" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -75.0
margin_right = 375.0
margin_bottom = -25.0
custom_fonts/font = SubResource( 2 )
text = "Stats"
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 625.0
margin_top = -75.0
margin_right = 800.0
margin_bottom = -25.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="NextRoom" to="." method="_on_NextRoom_pressed"]
[connection signal="pressed" from="Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="Stats" to="." method="_on_Stats_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
